// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/ChannelSelectorModal > exclude already selected 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="channelSelectorModalLabel"
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal more-modal more-direct-channels channel-selector-modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h1
              class="modal-title"
              id="channelSelectorModalLabel"
            >
              Add Channels to 
              <b>
                Channel Selection
              </b>
               List
            </h1>
          </div>
          <div
            class="modal-body"
          >
            <div
              class="filtered-user-list"
            >
              <div
                class="filter-row"
              >
                <div
                  class="multi-select__container react-select"
                >
                  <div
                    class="css-1dedlln"
                    id="selectItems"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-3-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                      role="log"
                    >
                      <span
                        id="aria-selection"
                      />
                      <span
                        id="aria-focused"
                      />
                      <span
                        id="aria-results"
                      />
                      <span
                        id="aria-guidance"
                      />
                    </span>
                    <div
                      class="react-select-auto react-select__control react-select-auto react-select__control--is-focused css-t3ipsp-control"
                    >
                      <div
                        class="react-select-auto react-select__value-container react-select-auto react-select__value-container--is-multi css-hlgwow"
                      >
                        <div
                          class="react-select-auto react-select__placeholder css-1jqq78o-placeholder"
                          id="react-select-3-placeholder"
                        >
                          Search and add channels
                        </div>
                        <div
                          class="react-select-auto react-select__input-container css-19bb58m"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-describedby="react-select-3-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-invalid="false"
                            aria-label="Search and add channels"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select-auto react-select__input"
                            id="react-select-3-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <button
                    class="btn btn-primary "
                    data-testid="saveSetting"
                    id="saveItems"
                    type="submit"
                  >
                    <span>
                      Add
                    </span>
                  </button>
                </div>
                <div
                  class="multi-select__help"
                  id="multiSelectHelpMemberInfo"
                >
                  Use ↑↓ to browse, ↵ to select.
                </div>
              </div>
              <div
                aria-live="polite"
                class="multi-select__wrapper"
              >
                <div
                  class="more-modal__list"
                >
                  <div
                    aria-live="polite"
                    class="sr-only"
                    role="status"
                  >
                    1 result found for your search.
                  </div>
                  <div
                    aria-atomic="true"
                    aria-live="polite"
                    class="sr-only"
                  />
                  <div
                    class="more-modal__options"
                    id="multiSelectList"
                    role="presentation"
                  >
                    <div
                      class="more-modal__row clickable "
                    >
                      <div
                        class="more-modal__details"
                      >
                        <div
                          class="channel-info-block"
                        >
                          <i
                            class="icon icon-globe"
                          />
                          <span
                            class="channel-name"
                          >
                            name
                          </span>
                          <span
                            class="team-name"
                          >
                            (teamDisplayName)
                          </span>
                        </div>
                      </div>
                      <div
                        class="more-modal__actions"
                      >
                        <button
                          aria-label="Select channel"
                          class="more-modal__actions--round"
                        >
                          <i
                            class="icon icon-plus"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="multi-select__help"
                id="multiSelectMessageNote"
              />
              <div
                class="filter-controls"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/ChannelSelectorModal > should match snapshot 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="channelSelectorModalLabel"
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal more-modal more-direct-channels channel-selector-modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h1
              class="modal-title"
              id="channelSelectorModalLabel"
            >
              Add Channels to 
              <b>
                Channel Selection
              </b>
               List
            </h1>
          </div>
          <div
            class="modal-body"
          >
            <div
              class="filtered-user-list"
            >
              <div
                class="filter-row"
              >
                <div
                  class="multi-select__container react-select"
                >
                  <div
                    class="css-1dedlln"
                    id="selectItems"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-2-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                      role="log"
                    >
                      <span
                        id="aria-selection"
                      />
                      <span
                        id="aria-focused"
                      />
                      <span
                        id="aria-results"
                      />
                      <span
                        id="aria-guidance"
                      />
                    </span>
                    <div
                      class="react-select-auto react-select__control react-select-auto react-select__control--is-focused css-t3ipsp-control"
                    >
                      <div
                        class="react-select-auto react-select__value-container react-select-auto react-select__value-container--is-multi css-hlgwow"
                      >
                        <div
                          class="react-select-auto react-select__placeholder css-1jqq78o-placeholder"
                          id="react-select-2-placeholder"
                        >
                          Search and add channels
                        </div>
                        <div
                          class="react-select-auto react-select__input-container css-19bb58m"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-describedby="react-select-2-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-invalid="false"
                            aria-label="Search and add channels"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select-auto react-select__input"
                            id="react-select-2-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <button
                    class="btn btn-primary "
                    data-testid="saveSetting"
                    id="saveItems"
                    type="submit"
                  >
                    <span>
                      Add
                    </span>
                  </button>
                </div>
                <div
                  class="multi-select__help"
                  id="multiSelectHelpMemberInfo"
                >
                  Use ↑↓ to browse, ↵ to select.
                </div>
              </div>
              <div
                aria-live="polite"
                class="multi-select__wrapper"
              >
                <div
                  class="more-modal__list"
                >
                  <div
                    aria-live="polite"
                    class="sr-only"
                    role="status"
                  >
                    2 results found for your search.
                  </div>
                  <div
                    aria-atomic="true"
                    aria-live="polite"
                    class="sr-only"
                  />
                  <div
                    class="more-modal__options"
                    id="multiSelectList"
                    role="presentation"
                  >
                    <div
                      class="more-modal__row clickable "
                    >
                      <div
                        class="more-modal__details"
                      >
                        <div
                          class="channel-info-block"
                        >
                          <i
                            class="icon icon-globe"
                          />
                          <span
                            class="channel-name"
                          >
                            name
                          </span>
                          <span
                            class="team-name"
                          >
                            (teamDisplayName)
                          </span>
                        </div>
                      </div>
                      <div
                        class="more-modal__actions"
                      >
                        <button
                          aria-label="Select channel"
                          class="more-modal__actions--round"
                        >
                          <i
                            class="icon icon-plus"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="more-modal__row clickable "
                    >
                      <div
                        class="more-modal__details"
                      >
                        <div
                          class="channel-info-block"
                        >
                          <i
                            class="icon icon-globe"
                          />
                          <span
                            class="channel-name"
                          >
                            name
                          </span>
                          <span
                            class="team-name"
                          >
                            (teamDisplayName)
                          </span>
                        </div>
                      </div>
                      <div
                        class="more-modal__actions"
                      >
                        <button
                          aria-label="Select channel"
                          class="more-modal__actions--round"
                        >
                          <i
                            class="icon icon-plus"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="multi-select__help"
                id="multiSelectMessageNote"
              />
              <div
                class="filter-controls"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
